--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/UI/general.css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AI 2.0</title>
 </head>
 <body>
-    
+    <script src="/Nodes/Create_Node.js"></script>
+    <h1>AI 2.0</h1>
+    <input type="text" id="userInput">
 </body>
 </html>
