--- a/index.html
+++ b/index.html
@@ -34,5 +34,7 @@
 
     <!-- <script src="/UI/Quick_Variables/clock.js"></script> -->
     <script src="init.js"></script>
+
+    <!-- <script src="diagnostic-test.js"></script> -->
 </body>
 </html>
